# ConsoleGame

./: CMakeLists.txt  README.md  main.cpp
Classes/: Map.cpp  Map.h  MapRenderer.cpp  MapRenderer.h
ConsoleGame/: CMakeLists.txt  main.cpp
ConsoleGame/Classes/: Enemy.cpp  Enemy.h  Map.cpp  Map.h  Math.cpp  Math.h  Player.cpp  Player.h  Terminal.cpp  Terminal.h
Enums/: Difficulty.cpp
